--- a/app/src/main/res/layout/activity_language_selection.xml
+++ b/app/src/main/res/layout/activity_language_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo_2"
+    android:background="@color/white"
     tools:context=".views.LanguageSelection">
 
     <ImageView
@@ -35,7 +35,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/welcome"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="400dp"
         android:text="@string/select"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,9 +72,10 @@
         android:layout_width="183dp"
         android:layout_height="55dp"
         android:layout_marginTop="544dp"
-        android:backgroundTint="@color/spotify"
+        android:backgroundTint="@android:color/holo_red_light"
         android:text="@string/start"
         android:textColor="@drawable/button_text_color"
+        android:textIsSelectable="false"
         android:textSize="18sp"
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
