--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/loginbackground"
     android:paddingStart="12dp"
     tools:context=".views.register.RegisterActivity">
 
@@ -124,7 +124,7 @@
         android:background="@drawable/custom_button"
         android:onClick="btnRegisterAction"
         android:text="@string/btnRegister"
-        app:backgroundTint="#1db954"
+        app:backgroundTint="@android:color/holo_red_light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
@@ -136,7 +136,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="100dp"
-        android:backgroundTint="@color/spotify"
+        android:backgroundTint="@android:color/holo_red_light"
         android:onClick="btnCancelAction"
         android:text="@string/btnCancel"
         app:cornerRadius="10dp"
