--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,9 @@
         android:background="@android:color/holo_red_light"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
@@ -24,11 +26,9 @@
         android:text="@string/to_learn"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/back"
@@ -46,48 +46,6 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="126dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/primaria" />
-
-    <Button
-        android:id="@+id/food"
-        android:layout_width="147dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="88dp"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:text="@string/food"
-        android:textColor="@drawable/button_text_color"
-        android:textSize="16sp"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/animals" />
-
-    <Button
-        android:id="@+id/animals"
-        android:layout_width="140dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="160dp"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:text="@string/animals"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:cornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="148dp"
@@ -99,7 +57,48 @@
         app:srcCompat="@drawable/preescolar" />
 
     <Button
-        android:id="@+id/synonymsButton"
+        android:id="@+id/preschool"
+        android:layout_width="140dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="160dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="@string/animals"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:cornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="126dp"
+        android:layout_height="123dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:srcCompat="@drawable/primaria" />
+
+    <Button
+        android:id="@+id/elementary"
+        android:layout_width="165dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="88dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="@string/food"
+        android:textColor="@drawable/button_text_color"
+        android:textSize="16sp"
+        app:cornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.169"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/preschool" />
+
+    <Button
+        android:id="@+id/elementary3"
         android:layout_width="173dp"
         android:layout_height="44dp"
         android:layout_marginTop="96dp"
@@ -111,7 +110,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.459"
         app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/verbs" />
+        app:layout_constraintTop_toBottomOf="@+id/elementary2" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -136,7 +135,7 @@
         app:srcCompat="@drawable/primaria2" />
 
     <Button
-        android:id="@+id/verbs"
+        android:id="@+id/elementary2"
         android:layout_width="182dp"
         android:layout_height="44dp"
         android:layout_marginTop="88dp"
@@ -148,7 +147,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/food" />
+        app:layout_constraintTop_toBottomOf="@+id/elementary" />
 
     <ImageView
         android:id="@+id/imageView6"
